# fifteen-game

./: Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml
assets/: icon16.rgba  icon32.rgba  icon64.rgba
assets/icons/macos/: AppIcon.icns
assets/icons/web/: site.webmanifest
src/: board.rs  consts.rs  game.rs  main.rs  render.rs  types.rs  ui.rs
src/scenes/: menu.rs  mod.rs  options.rs  playing.rs  victory.rs
