[package]
name = "fifteen-game"
version = "0.1.0"
edition = "2021"
description = "Classic fifteen puzzle with warm tactile visuals"
authors = ["olamedia"]
license = "MIT"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
section = "games"
priority = "optional"
assets = [
    ["target/release/fifteen-game", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fifteen-game", dest = "/usr/bin/fifteen-game", mode = "755" },
]
